# hls-client-cpp

./: CMakeLists.txt  Makefile  README.md  TODO.md
.zed/: settings.json
data/: output.m3u8  output_0.ts  output_1.ts  output_2.ts  output_3.ts  output_4.ts  output_5.ts
src/: civetweb.c  hls.h  hls_client.cpp  hls_server.cpp
